<resources>
    <string name="app_name">ElorrietaClient</string>
    <string name="connect">Connect</string>
    <string name="disconnect">Disconnect</string>
    <string name="say_hi">Login</string>
    <string name="actions">Actions....</string>
    <string name="answer_me">Get All Tachers</string>
    <string name="send_object">Logout</string>
    <string name="getTechers">get Students</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sacar_foto">Sacar Foto</string>
    <string name="enviar">Enviar</string>
    <string name="userIcon">se muestra la foto de usuarios logeado</string>
    <string name="recordar_usuario">Recordar Usuario</string>
    <string name="olvide_mi_password">Olvide mi password</string>
</resources>